 phpVMS - Virtual Airline Management and Administration
	Copyright (c) 2008 Nabeel Shahzad
	http://www.phpvms.net
---

phpVMS Build Changelog:

Build 304

  New Stuff
  * Officially sync'd with Codon framework (www.nsslive.net/codon)
  * Added license information to source files (GPL'd)
  * Pilot profile shows PIREPs for that pilot
  * Ranks are edit-able
  * Images for Ranks - in the options, enter the URL to the image, full or the
		path to the image from the root
  * Editable/Deletable schedules
  * Login notifies the unconfirmed/rejected pilots, disallows their login
  
  Fixes
  * PIREP/Schedules disconnected so editing/deletion doesn't affect
     NOTE: This *requires* the updated query below, or else you will
		   loose any PIREPs made on that schedule
  * Pilot profile moved out of popup box (easier to work with)
  * Template over-riding is working properly
  * All of the schedules show up properly
  * Prettied up Admin Panel
  * Reorganized PIREP page
  * Some updates/improvments to Google Maps code
  * PIREP list bugfix
  * CSS bug with huge gap fixed on some forms
  
  Settings Added:
  
  $Config['PILOTID_OFFSET'] - Add/Set this in your local.config.php; i.e a setting
	of 1000 will start your pilot ID at 1000. This only affects the views. Default
	is 0.
	
  Update Queries (Replace phpvms_ with your table prefix)
  
	 ALTER TABLE `phpvms_pireps` DROP INDEX `flightnum`;
	 ALTER TABLE `phpvms_ranks` ADD `rankimage` TEXT NOT NULL AFTER `rank` ;
	 
	If the first query does not work, then drop the table and reinstall, sorry.
	MySQL is sometimes retarded.

Build 286 04.15

  * Rank is now editable
  * Adding/Editing rank doesn't throw "Not Number" error
  * Add Schedule form moved out of popup (the form was just too large)
  * Confirmation done by admin, instead of automatic on email confirm
  * All accepted PIREPs for PIREP show up on a map
  * Installer fix
  * Rewrote Google Maps code, class based, makes it easier for add-ons and also any other maps